# clover

./: .gitignore  .gitmodules  README.md
clover/launch/: slam.launch
detection/: CMakeLists.txt  delete_model.bash  detection.launch  download_model.bash  package.xml
detection/src/: detection.cpp
slam/: CMakeLists.txt  package.xml  slam.launch  untar_dictionary.bash
slam/src/: mono.cpp
