<?xml version="1.0"?>
<package format="2">
  <name>human_detection</name>
  <version>0.1.0</version>
  <description>Detect humans with NCS</description>

  <maintainer email="dmitribeloborodov@yandex.ru">Dmitrii Beloborodov</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/BeloborodovDS/clover</url>
  <author email="dmitribeloborodov@yandex.ru">Dmitrii Beloborodov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

</package>
